--- a/attack-on-cryptoeyes-naive-attack.ipynb
+++ b/attack-on-cryptoeyes-naive-attack.ipynb
@@ -2,50 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "2c966e62",
-   "metadata": {
-    "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
-    "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
-    "execution": {
-     "iopub.execute_input": "2025-08-07T08:24:53.349513Z",
-     "iopub.status.busy": "2025-08-07T08:24:53.349118Z",
-     "iopub.status.idle": "2025-08-07T08:24:55.292757Z",
-     "shell.execute_reply": "2025-08-07T08:24:55.291593Z"
-    },
-    "papermill": {
-     "duration": 1.950544,
-     "end_time": "2025-08-07T08:24:55.294520",
-     "exception": false,
-     "start_time": "2025-08-07T08:24:53.343976",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# This Python 3 environment comes with many helpful analytics libraries installed\n",
-    "# It is defined by the kaggle/python Docker image: https://github.com/kaggle/docker-python\n",
-    "# For example, here's several helpful packages to load\n",
-    "\n",
-    "import numpy as np # linear algebra\n",
-    "import pandas as pd # data processing, CSV file I/O (e.g. pd.read_csv)\n",
-    "\n",
-    "# Input data files are available in the read-only \"../input/\" directory\n",
-    "# For example, running this (by clicking run or pressing Shift+Enter) will list all files under the input directory\n",
-    "\n",
-    "import os\n",
-    "for dirname, _, filenames in os.walk('/kaggle/input'):\n",
-    "    for filename in filenames:\n",
-    "        print(os.path.join(dirname, filename))\n",
-    "\n",
-    "# You can write up to 20GB to the current directory (/kaggle/working/) that gets preserved as output when you create a version using \"Save & Run All\" \n",
-    "# You can also write temporary files to /kaggle/temp/, but they won't be saved outside of the current session"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "47e31500",
    "metadata": {
     "execution": {
@@ -85,6 +42,8 @@
    ],
    "source": [
     "import numpy as np\n",
+    "import pandas as pd\n",
+    "import os\n",
     "import tensorflow as tf\n",
     "from tensorflow.keras.datasets import mnist\n",
     "from Crypto.Cipher import AES\n",
